align some character information

--- a/general_website/templates/general_website/chart.html
+++ b/general_website/templates/general_website/chart.html
@@ -34,52 +34,52 @@
                                     <span id="c_spec">Spec &</span>
                                     <span id="c_class">Class</span>
                                 </td>
-                                <td colspan="2" id="c_talents" class="text-right">1231231</td>
+                                <td colspan="2" id="c_talents" class="text-right align-middle">1231231</td>
                             </tr>
                             <tr>
-                                <td id="c_head">Head</td>
-                                <td>{% translate "Covenant" %}</td>
-                                <td id="c_covenant">-</td>
-                                <td id="c_hands">Hands</td>
+                                <td class="align-middle" id="c_head">Head</td>
+                                <td class="align-middle">{% translate "Covenant" %}</td>
+                                <td class="align-middle" id="c_covenant">-</td>
+                                <td class="align-middle" id="c_hands">Hands</td>
                             </tr>
                             <tr>
-                                <td id="c_neck">Neck</td>
-                                <td>{% translate "Soulbind" %}</td>
-                                <td id="c_soul_bind">-</td>
-                                <td id="c_waist">Waist</td>
+                                <td class="align-middle" id="c_neck">Neck</td>
+                                <td class="align-middle">{% translate "Soulbind" %}</td>
+                                <td class="align-middle" id="c_soul_bind">-</td>
+                                <td class="align-middle" id="c_waist">Waist</td>
                             </tr>
                             <tr>
-                                <td id="c_shoulders">Shoulders</td>
+                                <td class="align-middle" id="c_shoulders">Shoulders</td>
                                 <td colspan="2"></td>
-                                <td id="c_legs">Legs</td>
+                                <td class="align-middle" id="c_legs">Legs</td>
                             </tr>
                             <tr>
-                                <td id="c_back">Back</td>
+                                <td class="align-middle" id="c_back">Back</td>
                                 <td colspan="2"></td>
-                                <td id="c_feet">Feet</td>
+                                <td class="align-middle" id="c_feet">Feet</td>
                             </tr>
                             <tr>
-                                <td id="c_chest">Chest</td>
+                                <td class="align-middle" id="c_chest">Chest</td>
                                 <td colspan="2"></td>
-                                <td id="c_finger1">Ring</td>
+                                <td class="align-middle" id="c_finger1">Ring</td>
                             </tr>
                             <tr>
                                 <td colspan="3"></td>
-                                <td id="c_finger2">Ring</td>
+                                <td class="align-middle" id="c_finger2">Ring</td>
                             </tr>
                             <tr>
                                 <td colspan="3"></td>
-                                <td id="c_trinket1">Trinket</td>
+                                <td class="align-middle" id="c_trinket1">Trinket</td>
                             </tr>
                             <tr>
-                                <td id="c_wrists">Wrists</td>
+                                <td class="align-middle" id="c_wrists">Wrists</td>
                                 <td colspan="2"></td>
-                                <td id="c_trinket2">Trinket</td>
+                                <td class="align-middle" id="c_trinket2">Trinket</td>
                             </tr>
                             <tr>
                                 <td></td>
-                                <td id="c_main_hand">Weapon</td>
-                                <td id="c_off_hand">Off-Hand</td>
+                                <td class="align-middle" id="c_main_hand">Weapon</td>
+                                <td class="align-middle" id="c_off_hand">Off-Hand</td>
                                 <td></td>
                             </tr>
                         </tbody>
