enable extrahead to be actually an extra head

--- a/general_website/templates/general_website/layout/base.html
+++ b/general_website/templates/general_website/layout/base.html
@@ -3,9 +3,11 @@
 
 <!DOCTYPE html>
 <html>
+<head>
     {% include 'general_website/layout/head.html' %}
     {% block extrahead %}
     {% endblock %}
+</head>
 <body>
     {% include 'general_website/layout/nav_top.html' %}
 
