--- a/general_website/templates/general_website/layout/head.html
+++ b/general_website/templates/general_website/layout/head.html
@@ -1,15 +1,13 @@
 {% load i18n %}
 {% load sass_tags %}
 {% load static %}
-<head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>bloodmallet - {% translate "data for all" %}</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="{% sass_src 'general_website/css/base.scss' %}" />
-    <link rel="shortcut icon" type="image/png" href="{% static 'general_website/favicon.ico' %}"/>
-    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate"/>
-    <meta http-equiv="Pragma" content="no-cache"/>
-    <meta http-equiv="Expires" content="0"/>
-    <!--<script src="main.js"></script>-->
-</head>
+<meta charset="utf-8" />
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<title>bloodmallet - {% translate "data for all" %}</title>
+<meta name="description" content="World of Warcraft data for all using SimulationCraft">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" type="text/css" media="screen" href="{% sass_src 'general_website/css/base.scss' %}" />
+<link rel="shortcut icon" type="image/png" href="{% static 'general_website/favicon.ico' %}"/>
+<meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate"/>
+<meta http-equiv="Pragma" content="no-cache"/>
+<meta http-equiv="Expires" content="0"/>
