--- a/general_website/templates/general_website/chart.html
+++ b/general_website/templates/general_website/chart.html
@@ -4,6 +4,24 @@
 {% load i18n %}
 {% load multiply %}
 
+{% block extrahead %}
+{% comment %} https://ogp.me/ {% endcomment %}
+<meta property="og:type" content="website">
+<meta property="og:url" content="{{ request.build_absolute_uri }}">
+{% if chart %}
+<meta property="og:title" content="{{ chart.wow_spec.name }} {{ chart.wow_class.name }} {{ chart.simulation_type.name }} {{ chart.fight_style.name }} - bloodmallet">
+{% else %}
+<meta property="og:title" content="404 chart not found - bloodmallet">
+{% endif %}
+<meta property="og:site_name" content="bloodmallet">
+<meta property="og:description" content="Data for all. Placeholder message until some backend changes happened that allow the first few data points to appear here.">
+{% comment %} <meta property="og:image" content="">
+<meta property="og:image:width" content="360">
+<meta property="og:image:height" content="50">
+<meta property="og:image:type" content="image/png"> {% endcomment %}
+
+{% endblock %}
+
 {% block content %}
 
 <h1 class=" display-4 mb-5 text-center">{% translate 'bloodmallet' %}</h1>
