line breaks aren't possible

--- a/general_website/templates/general_website/chart.html
+++ b/general_website/templates/general_website/chart.html
@@ -14,7 +14,7 @@
 {% else %}
 <meta property="og:title" content="404 chart not found">
 {% endif %}
-<meta property="og:description" content="Data for all.\nPlaceholder message until some backend changes happened, which allow the first few data points to appear here.">
+<meta property="og:description" content="Data for all. Placeholder message until some backend changes happened, which allow the first few data points to appear here.">
 {% comment %} <meta property="og:image" content="">
 <meta property="og:image:width" content="360">
 <meta property="og:image:height" content="50">
