prepare new logo even more

--- a/general_website/templates/general_website/layout/base.html
+++ b/general_website/templates/general_website/layout/base.html
@@ -45,6 +45,7 @@
     {% endblock %}
 
     <div id="background_image" style="background-image: url('{% static 'general_website/assets/bloodmallet.svg'%}');"></div>
+    <!-- <div id="background_image" style="background-image: url('{% static 'general_website/assets/bloodmallet_logo.svg'%}');"></div> -->
     {% include 'general_website/layout/nav_bottom.html' %}
 
     {# importer of js scripts #}
