--- a/general_website/templates/general_website/chart.html
+++ b/general_website/templates/general_website/chart.html
@@ -148,22 +148,64 @@
         </div>
     </div>
     <div id="chart_options" class="mt-3 row" hidden>
-        <div class=" col-12 col-md-6">
+        <!-- {% comment %} <div class="col-12 col-md-6">
             <button class="btn spec-btn {{ chart.wow_class.tokenized_name }}-button active" type="button">
                 {% translate "Soulbinds" %}
             </button>
         </div>
-        <div class=" col-12 col-md-6">
+        <div class="col-12 col-md-6">
             <button class="btn spec-btn {{ chart.wow_class.tokenized_name }}-button" type="button">
-                {% translate "Nodes" %}
+                {% translate "Nodes/Conduits" %}
             </button>
+        </div> {% endcomment %} -->
+        <div class="col-12 col-md-6">
+            <legend>Chart mode</legend>
+            <div class="form-check">
+                <input class="form-check-input" type="radio" name="chart_mode" id="soulbinds_mode" value="soulbinds" checked>
+                <label class="form-check-label" for="soulbinds_mode">
+                    {% translate "Soulbinds" %}
+                </label>
+            </div>
+            <div class="form-check">
+                <input class="form-check-input" type="radio" name="chart_mode" id="nodes_mode" value="nodes">
+                <label class="form-check-label" for="nodes_mode">
+                    {% translate "Nodes/Conduits" %}
+                </label>
+            </div>
+        </div>
+        <div class="col-12 col-md-6" id="covenant_selection" hidden>
+            <legend>Covenant</legend>
+            <div class="form-check">
+                <input class="form-check-input" type="radio" name="covenant_selection" id="kyrian_selection" value="Kyrian" checked>
+                <label class="form-check-label" for="kyrian_selection">
+                    {% translate "Kyrian" %}
+                </label>
+            </div>
+            <div class="form-check">
+                <input class="form-check-input" type="radio" name="covenant_selection" id="necrolord_selection" value="Necrolord">
+                <label class="form-check-label" for="necrolord_selection">
+                    {% translate "Necrolord" %}
+                </label>
+            </div>
+            <div class="form-check">
+                <input class="form-check-input" type="radio" name="covenant_selection" id="night_fae_selection" value="Night Fae">
+                <label class="form-check-label" for="night_fae_selection">
+                    {% translate "Night Fae" %}
+                </label>
+            </div>
+            <div class="form-check">
+                <input class="form-check-input" type="radio" name="covenant_selection" id="venthyr_selection" value="Venthyr">
+                <label class="form-check-label" for="venthyr_selection">
+                    {% translate "Venthyr" %}
+                </label>
+            </div>
         </div>
     </div>
     <div id="value_style_switch" class="form-group form-check text-right" hidden>
         <input type="checkbox" class="form-check-input" id="relative_values">
         <label class="form-check-label text-muted" for="relative_values">{% translate "Use relative values" %}</label>
     </div>
-    <div id="talent-warning" hidden>
+    <div id="talent-warning" class="mt-3" hidden>
         <h3>{% translate "Disclaimer" %}</h3>
         <p>{% translate "Talent simulations are quite fragile for the following reasons:" %}</p>
         <ul>
@@ -197,7 +239,7 @@
     </div>
 </div>
 
-<div id="chart" class="bloodmallet_chart" data-chart-id="{{ chart_id }}" data-language="{{ LANGUAGE_CODE }}" data-entries="10000" data-background-color="transparent" data-value-style="absolute"></div>
+<div id="chart" class="bloodmallet_chart mt-3" data-chart-id="{{ chart_id }}" data-language="{{ LANGUAGE_CODE }}" data-entries="10000" data-background-color="transparent" data-value-style="absolute"></div>
 
 <div id="post_chart" class="mt-5" hidden></div>
 
@@ -220,10 +262,32 @@ function update_value_style() {
     }
 
     bloodmallet_chart_import();
-
+}
+function update_chart_mode() {
+    document.getElementsByName("chart_mode").forEach(element=>{
+        if (element.checked) {
+            document.getElementById("covenant_selection").hidden = element.value === "soulbinds";
+            document.getElementById("chart").dataset.chartMode = element.value;
+            bloodmallet_chart_import();
+        }
+    });
+}
+function update_covenant() {
+    document.getElementsByName("covenant_selection").forEach(element=>{
+        if (element.checked) {
+            document.getElementById("chart").dataset.covenant = element.value;
+            bloodmallet_chart_import();
+        }
+    });
 }
 document.addEventListener("DOMContentLoaded", function () {
     document.getElementById("relative_values").addEventListener("change", update_value_style);
+    document.getElementsByName("chart_mode").forEach(element=>{
+        element.addEventListener("change", update_chart_mode);
+    });
+    document.getElementsByName("covenant_selection").forEach(element=>{
+        element.addEventListener("change", update_covenant);
+    });
 });
 </script>
 
