re-enable soulbind information in character profiles again...this needs polishing in the future

--- a/general_website/templates/general_website/chart.html
+++ b/general_website/templates/general_website/chart.html
@@ -63,7 +63,7 @@
                             <tr>
                                 <td class="align-middle" id="c_neck">Neck</td>
                                 <td class="align-middle">{% translate "Soulbind" %}</td>
-                                <td class="align-middle" id="c_soul_bind">-</td>
+                                <td class="align-middle" id="c_soulbind">-</td>
                                 <td class="align-middle" id="c_waist">Waist</td>
                             </tr>
                             <tr>
