--- a/general_website/templates/general_website/chart.html
+++ b/general_website/templates/general_website/chart.html
@@ -14,7 +14,7 @@
 {% else %}
 <meta property="og:title" content="404 chart not found">
 {% endif %}
-<meta property="og:description" content="Data for all. Placeholder message until some backend changes happened, which allow the first few data points to appear here.">
+<meta property="og:description" content="Data for all.">
 {% comment %} <meta property="og:image" content="">
 <meta property="og:image:width" content="360">
 <meta property="og:image:height" content="50">
@@ -143,21 +143,21 @@
                             </tr>
                         </tbody>
                     </table>
+                    {% if chart %}
+                    <div class="form-group">
+                        <label for="custom_fight_style">{% translate "Custom fight style" %}</label>
+                        <textarea class="form-control" id="custom_fight_style" rows="3">{{ chart.custom_fight_style }}</textarea>
+                    </div>
+                    <div class="form-group">
+                        <label for="custom_apl">{% translate "Custom APL" %}</label>
+                        <textarea class="form-control" id="custom_apl" rows="3">{{ chart.custom_apl }}</textarea>
+                    </div>
+                    {% endif %}
                 </div>
             </div>
         </div>
     </div>
     <div id="chart_options" class="mt-3 row" hidden>
-        <!-- {% comment %} <div class="col-12 col-md-6">
-            <button class="btn spec-btn {{ chart.wow_class.tokenized_name }}-button active" type="button">
-                {% translate "Soulbinds" %}
-            </button>
-        </div>
-        <div class="col-12 col-md-6">
-            <button class="btn spec-btn {{ chart.wow_class.tokenized_name }}-button" type="button">
-                {% translate "Nodes/Conduits" %}
-            </button>
-        </div> {% endcomment %} -->
         <div class="col-12 col-md-6">
             <legend>Chart mode</legend>
             <div class="form-check">
