fix fight style determinator for custom fight styles

--- a/general_website/templates/general_website/create_chart.html
+++ b/general_website/templates/general_website/create_chart.html
@@ -108,8 +108,16 @@ function update_custom_fight_style() {
     let element = document.getElementById("id_custom_fight_style");
     let fight_style = document.getElementById("id_fight_style").value;
     fight_style_names = {
-        1: "patchwerk",
-        2: "hecticaddcleave"
+        1: "Patchwerk",
+        2: "HecticAddCleave",
+        3: "Beastlord",
+        4: "CastingPatchwerk",
+        5: "CleaveAdd",
+        6: "DungeonSlice",
+        7: "HeavyMovement",
+        8: "HelterSkelter",
+        9: "LightMovement",
+        10: "Ultraxion"
     }
     let fight_length = document.getElementById("id_fight_length").value;
     let targets = document.getElementById("id_targets").value;
